--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
 
     <!-- Google sign in -->
     <meta name="google-signin-client_id" content="879615622858-f2oj26u8ac8b4r51f14nhb2ankf0rnpc.apps.googleusercontent.com">
