Add persistence with local storage

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 
     <!-- Google sign in -->
     <meta name="google-signin-client_id" content="879615622858-f2oj26u8ac8b4r51f14nhb2ankf0rnpc.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <title>Neon</title>
   </head>
