--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     <meta name="google-signin-client_id" content="879615622858-f2oj26u8ac8b4r51f14nhb2ankf0rnpc.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
+    <!-- Auth0 -->
+    <script type="text/javascript" src="node_modules/auth0-js/build/auth0.js"></script>
+
+    
     <title>Neon</title>
   </head>
   <body>
